[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build   = "build.rs"
edition = "2021"
name    = "binding_core_node"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = { version = "2" }

[dependencies]
napi = "2"
napi-derive = "2"
anyhow = "1.0.66"
clap = {version = "4.0.23", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.14"
rayon = "1"
stc_ts_builtin_types = {path = "../../crates/stc_ts_builtin_types"}
stc_ts_env = {path = "../../crates/stc_ts_env"}
stc_ts_errors = {path = "../../crates/stc_ts_errors"}
stc_ts_file_analyzer = {path = "../../crates/stc_ts_file_analyzer"}
stc_ts_lang_server = {path = "../../crates/stc_ts_lang_server"}
stc_ts_module_loader = {path = "../../crates/stc_ts_module_loader"}
stc_ts_type_checker = {path = "../../crates/stc_ts_type_checker"}
stc_utils = {path = "../../crates/stc_utils"}
swc_common = { version = "0.29.15" }
swc_ecma_ast = "0.94.20"
swc_ecma_parser = "0.122.29"
swc_node_base = "0.5.8"
tokio = {version = "1.7.1", features = ["rt-multi-thread", "macros"]}
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
tracing-subscriber = {version = "0.2.19", features = ["env-filter"]}

[profile.release]
lto = true

